# tennis_win_fun

./: .ruff.toml  README.md  alembic.ini  pyproject.toml
.github/workflows/: build_historic.yml  build_historic_matchs.yml  ci.yml  neon_workflow.yml
alembic/: env.py
alembic/versions/: 10b7f7d9a74f_add_historic_matchs_v2.py  374f71f17508_add_historic_match.py  93d6029b66f3_create_initial_tables.py  cb08834d0900_avoid_seed_match.py
batch/: build_historic.py  build_historic_match.py
tennis_win_fun/build_historic/: historic_launcher.py  models.py  read_all.py
tests/: test_build_historic.py
