[tool.poetry]
name = "tennis_win_fun"
version = "0.1.0"
description = "Analyse du tennis pour améliorer les pronostics"
authors = ["thimotte <thimottenicolas@gmail.com>"]
readme = "README.md"
packages = [{ include = "tennis_win_fun" }]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31"

[tool.poetry.dev-dependencies]
ruff = "^0.4.4"
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I", "UP"]
fixable = ["ALL"]
exclude = ["venv", ".venv", "tests/fixtures"]
